syntax = "proto3";

package api;

option java_multiple_files = true;
option java_package = "com.guan.sso.server.grpc.server";
option java_outer_classname = "SsoServerProtos";

message TokenRequest {
    string token = 1;
}

message VerifyReply {
    bool real = 1;
}

message UserReply {
    int64 uid = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutReply {
    bool real = 1;
}

service SsoService {
    rpc verifyToken (TokenRequest) returns (VerifyReply) {}
    rpc getUserByToken (TokenRequest) returns (UserReply) {}
    rpc logout (LogoutRequest) returns (LogoutReply) {}
}